--- a/index.html
+++ b/index.html
@@ -7,56 +7,63 @@ permalink: /
 <div id="service">
     <div class="container">
         <div class="row centered">
+          <h2>Ocata Epic Status</h2>
             <div class="col-md-4">
-                <i class="fa fa-heart-o" aria-hidden="true"></i>
-                <span class="sr-only">An image of a love-heart</span>
-                <h4>Handsomely Crafted</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <h4>Gate jobs for testing upgrades through Grenade</h4>
+                <p><em><font color="green">In Progress (waiting on upstream community to merge)</font></em></p>
+                <p>Create experimental gate jobs for Keystone, Swift and Glance</p>
+                <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-481" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-flask" aria-hidden="true"></i>
-                <span class="sr-only">An image of a laboratory flask</span>
-                <h4>Retina Ready</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <h4>Simple/rolling upgrade CI fully working on the BME solution</h4>
+                <p><em><font color="green">In Progress (fixing post upgrade test issues)</font></em></p>
+                <p>Working E2E flows on bare-metal deployment</p>
+                <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-485" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-trophy" aria-hidden="true"></i>
-                <span class="sr-only">An image of a trophy</span>
-                <h4>Quality Theme</h4>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p><br/><a href="#" class="btn btn-theme">More Info</a></p>
+                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <h4>Migrate the performance benchmarking CI to BME</h4>
+                <p><em><font color="green">In Progress</font></em></p>
+                <p>Working E2E flows on bare-metal deployment</p>
+                <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-487" class="btn btn-theme">More Info</a></p>
+            </div>
+        </div>
+    </div><! --/container -->
+    <div class="container">
+        <div class="row centered">
+            <div class="col-md-4">
+                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <h4>Grenade – add multinode via LXC containers</h4>
+                <p><em><font color="red">Discontinued (Luz/Cas will send out details)</font></em></p>
+                <p>Add a Grenade spec; Start the conversation in the community; Create a PoC to validate proposed solution</p>
+                <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-552" class="btn btn-theme">More Info</a></p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <h4>Grenade - replace Simple Upgrade with Rolling Upgrade</h4>
+                <p><em><font color="green">In Progress (waiting on upstream community to merge)</font></em></p>
+                <p>Add a Grenade spec; Start the conversation in the community</p>
+                <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-553" class="btn btn-theme">More Info</a></p>
+            </div>
+            <div class="col-md-4">
+                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <h4>Grenade - tool updates</h4>
+                <p><em><font color="green">In Progress (waiting on upstream community to merge)</font></em></p>
+                <p>Add a Grenade spec for API uptime; Start the conversation in the community; Create a POC to validate proposed solution</p>
+                <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-610" class="btn btn-theme">More Info</a></p>
             </div>
         </div>
     </div><! --/container -->
 </div><! --/service -->
 
-{% include portfolio.html title="LATEST WORKS" limit=10 %}
-
 <div class="container mtb">
-    <div class="row">
-        <div class="col-lg-4 col-lg-offset-1">
-            <h4>More About Our Agency.</h4>
-            <p>{{ site.about }}</p>
-            <p><br/><a href="{{ "/about/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
-        </div>
-
-        <div class="col-lg-3">
-            <h4>Frequently Asked</h4>
-            <div class="hline"></div>
-            {% for question in site.questions %}
-                <p><a href="{{ question.url | prepend: site.baseurl }}">{{ question.title }}</a></p>
-            {% endfor %}
-        </div>
-
-        <div class="col-lg-3">
-            <h4>Latest Posts</h4>
-            <div class="hline"></div>
-            {% for post in site.posts limit:5 %}
-                <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}.</a></p>
-            {% endfor %}
-        </div>
-
+    <div class="row centered">
+        <h2>Weekly Status Updates</h2>
+        <div class="hline"></div>
+        {% for post in site.posts limit:5 %}
+            <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}.</a></p>
+        {% endfor %}
     </div><! --/row -->
 </div><! --/container -->
