Add status for March 3rd

--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@ permalink: /
         <div class="row centered">
           <h2>Ocata Epic Status</h2>
             <div class="col-md-4">
-                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <i class="fa fa-signal" aria-hidden="true" style="color:#F5D04C"></i>
                 <h4>Gate jobs for testing upgrades through Grenade</h4>
-                <p><em><font color="green">In Progress (waiting on upstream community to merge)</font></em></p>
+                <p><em><font color="#F5D04C">In Progress (waiting on upstream community to merge)</font></em></p>
                 <p>Create experimental gate jobs for Keystone, Swift and Glance</p>
                 <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-481" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
                 <h4>Simple/rolling upgrade CI fully working on the BME solution</h4>
-                <p><em><font color="green">In Progress (fixing post upgrade test issues)</font></em></p>
+                <p><em><font color="green">Complete for Mitaka -> Newton</font></em></p>
                 <p>Working E2E flows on bare-metal deployment</p>
                 <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-485" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
                 <h4>Migrate the performance benchmarking CI to BME</h4>
-                <p><em><font color="green">In Progress</font></em></p>
+                <p><em><font color="green">Complete</font></em></p>
                 <p>Working E2E flows on bare-metal deployment</p>
                 <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-487" class="btn btn-theme">More Info</a></p>
             </div>
@@ -34,23 +34,23 @@ permalink: /
     <div class="container">
         <div class="row centered">
             <div class="col-md-4">
-                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <i class="fa fa-signal" aria-hidden="true" style="color:red"></i>
                 <h4>Grenade – add multinode via LXC containers</h4>
-                <p><em><font color="red">Discontinued (Luz/Cas will send out details)</font></em></p>
+                <p><em><font color="red">Abandoned</font></em></p>
                 <p>Add a Grenade spec; Start the conversation in the community; Create a PoC to validate proposed solution</p>
                 <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-552" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <i class="fa fa-signal" aria-hidden="true" style="color:red"></i>
                 <h4>Grenade - replace Simple Upgrade with Rolling Upgrade</h4>
-                <p><em><font color="green">In Progress (waiting on upstream community to merge)</font></em></p>
+                <p><em><font color="red">Abandoned</font></em></p>
                 <p>Add a Grenade spec; Start the conversation in the community</p>
                 <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-553" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
-                <i class="fa fa-signal" aria-hidden="true" style="color:green"></i>
+                <i class="fa fa-signal" aria-hidden="true" style="color:red"></i>
                 <h4>Grenade - tool updates</h4>
-                <p><em><font color="green">In Progress (waiting on upstream community to merge)</font></em></p>
+                <p><em><font color="red">Abandoned</font></em></p>
                 <p>Add a Grenade spec for API uptime; Start the conversation in the community; Create a POC to validate proposed solution</p>
                 <p><br/><a href="https://01.org/jira/secure/RapidBoard.jspa?rapidView=37&view=planning&selectedIssue=OSIC-611&epics=visible&selectedEpic=OSIC-610" class="btn btn-theme">More Info</a></p>
             </div>
